--- a/styles/footer.css
+++ b/styles/footer.css
@@ -94,23 +94,24 @@
   src: url(../font/GenYoMin-SB.ttc);
 }
 .footer {
-  margin-bottom: 70px;
   position: relative;
-  width: 100%;
   top: 40px;
   z-index: 999;
+  margin-bottom: 70px;
+  width: 100%;
   -webkit-transition: 0.5s ease;
   -o-transition: 0.5s ease;
   transition: 0.5s ease;
 }
 .footer:after {
-  content: "";
   position: absolute;
   top: 100%;
   left: 50%;
-  width: calc(100vw - 15px);
+  z-index: -2;
+  width: 100vw;
   height: 70px;
   background: #c2ab93;
+  content: "";
   -webkit-transform: translateX(-50%);
       -ms-transform: translateX(-50%);
           transform: translateX(-50%);
@@ -121,19 +122,19 @@
   }
 }
 .footer:before {
-  content: "";
   position: absolute;
   top: 0;
   right: calc((100vw - 100% - 40px) * -0.5 + 60px);
+  z-index: -1;
   width: 100vw;
   height: 100%;
-  background: rgba(255, 255, 255, 0.6);
   border-radius: 0 30px 0 0;
-  z-index: -1;
+  background: rgba(255, 255, 255, 0.6);
+  content: "";
 }
 .footer .container {
-  padding: 65px 0px;
   position: relative;
+  padding: 65px 0px;
 }
 @media only screen and (max-width: 1439px) {
   .footer .container {
@@ -141,45 +142,54 @@
   }
 }
 .footer .container:after {
-  content: "";
   position: absolute;
-  height: 100%;
-  width: 60%;
-  right: -40px;
   bottom: 0;
+  left: calc(640px + (100vw - 1280px) / 2);
+  z-index: -2;
+  width: 60%;
+  height: 100%;
   background-image: url(../images/wave-03.png);
-  background-repeat: no-repeat;
-  background-size: contain;
   background-position: bottom right;
+  background-size: contain;
+  background-repeat: no-repeat;
+  content: "";
 }
 .footer .container:before {
-  content: "";
   position: absolute;
-  height: 18.78vw;
-  width: 60vw;
-  right: 0;
+  right: -100px;
   bottom: -45px;
-  background-image: url(../images/footer-text-01.png);
-  background-repeat: no-repeat;
-  background-size: cover;
-  background-position: center;
   z-index: 1;
+  z-index: -1;
+  width: 60vw;
+  height: 18.78vw;
+  background-image: url(../images/footer-text-01.png);
+  background-position: center;
+  background-size: cover;
+  background-repeat: no-repeat;
+  content: "";
+}
+@media only screen and (max-width: 580px) {
+  .footer .container:before {
+    right: 0px;
+    width: 32vw;
+    height: 8.78vw;
+  }
 }
 .footer .logo {
   margin-bottom: 215px;
   width: 11.09%;
 }
-.footer .logo .img {
-  width: 100%;
-  padding-bottom: 35.2%;
-  background-size: cover;
-  background-repeat: no-repeat;
-  background-position: center;
-}
 @media only screen and (max-width: 800px) {
   .footer .logo {
     width: 38%;
   }
+}
+.footer .logo .img {
+  padding-bottom: 35.2%;
+  width: 100%;
+  background-position: center;
+  background-size: cover;
+  background-repeat: no-repeat;
 }
 .footer .contact .title {
   font-weight: bold;
