--- a/original/sass/custom.sass
+++ b/original/sass/custom.sass
@@ -418,8 +418,8 @@ body
 			width: calc(33.333% - (70px/3))
 
 			+breakpoint(pad-portrait)
-				margin-right: 30px !important
-				width: calc(50% - 15px)
+				margin-right: 0px !important
+				width: 100%
 			
 				&:nth-child(2n)
 					margin-right: 0px !important
