--- a/original/sass/header.sass
+++ b/original/sass/header.sass
@@ -17,7 +17,7 @@
         left: 0
         height: 100%
         width: 100%
-        background-image: linear-gradient(180deg, #2e1c01, transparent)
+        background-color: #4b453cd4
         transition: .5s ease
         z-index: -1
         opacity: 0
@@ -138,7 +138,10 @@
             position: absolute
             top: 100%
             right: 0
-            background: rgba(white, 0.7)
+            background: white
+
+            +breakpoint(pad-portrait)
+                top: calc( 100% + 15px )
 
             li
                 white-space: nowrap
