--- a/styles/custom.css
+++ b/styles/custom.css
@@ -1057,8 +1057,8 @@ body {
 }
 @media only screen and (max-width: 800px) {
   .works .card-box .work-card {
-    margin-right: 30px !important;
-    width: calc(50% - 15px);
+    margin-right: 0px !important;
+    width: 100%;
   }
   .works .card-box .work-card:nth-child(2n) {
     margin-right: 0px !important;
