--- a/styles/header.css
+++ b/styles/header.css
@@ -109,10 +109,7 @@
   left: 0;
   height: 100%;
   width: 100%;
-  background-image: -webkit-gradient(linear, left top, left bottom, from(#2e1c01), to(transparent));
-  background-image: -webkit-linear-gradient(top, #2e1c01, transparent);
-  background-image: -o-linear-gradient(top, #2e1c01, transparent);
-  background-image: linear-gradient(180deg, #2e1c01, transparent);
+  background-color: #4b453cd4;
   -webkit-transition: 0.5s ease;
   -o-transition: 0.5s ease;
   transition: 0.5s ease;
@@ -273,7 +270,12 @@
   position: absolute;
   top: 100%;
   right: 0;
-  background: rgba(255, 255, 255, 0.7);
+  background: white;
+}
+@media only screen and (max-width: 800px) {
+  .header .burger > ul {
+    top: calc(100% + 15px);
+  }
 }
 .header .burger > ul li {
   white-space: nowrap;
