增加work過濾功能

--- a/original/sass/header.sass
+++ b/original/sass/header.sass
@@ -28,6 +28,9 @@
         &:after
             top: 0px
             opacity: 1
+            
+            +breakpoint(zone-nb)
+                background: #34312e
 
         *   
             transition: .5s ease
