--- a/original/sass/footer.sass
+++ b/original/sass/footer.sass
@@ -16,7 +16,7 @@
 		position: absolute
 		top: 100%
 		left: 50%
-		width: calc(100vw - 15px)
+		width: 100%
 		height: 70px
 		background: #c2ab93
 		transform: translateX(-50%)
@@ -47,7 +47,7 @@
 			position: absolute
 			height: 100%
 			width: 60%
-			right: -40px
+			right: -80px
 			bottom: 0
 			background-image: url(../images/wave-03.png)
 			background-repeat: no-repeat
