--- a/original/styles/custom.sass
+++ b/original/styles/custom.sass
@@ -15,19 +15,13 @@ body
     width: 1280px
     max-width: 100%
 
-    +breakpoint(zone-nb)
-        max-width: calc(100% - 40px)
-
     &.full-40
         width: calc(100% - 40px)
-        max-width: calc(100%)
+        max-width:calc(100%)
         
     &.full-160
         width: calc(100% - 160px)
-        max-width: calc(100%)
-
-        +breakpoint(pad-portrait)
-            width: calc(100% - 80px)
+        max-width:calc(100%)
 
 [class*="btn"]
     padding: 18px 25px 18px 30px
@@ -67,12 +61,10 @@ body
         background-repeat: no-repeat
         background-position: center
 
-        +breakpoint(pad-portrait)
-            padding-bottom: calc(100vh - 40px)
-
         &:after
             content: ''
             position: absolute
+            
             top: 0
             right: 0
             height: 100%
@@ -99,15 +91,8 @@ body
             +breakpoint(zone-nb)
                 left: calc((100vw - 100% - 40px)*0.5)
 
-            +breakpoint(pad-portrait)
-                width: 100%
-                bottom: 10px
-
     .btn-scroll-down
         bottom: 40px
-
-        +breakpoint(zone-nb)
-            bottom: 0
 
 
 // service
@@ -115,17 +100,10 @@ body
     margin-top: -40px
     position: relative
     z-index: 2
-    +breakpoint(zone-nb)
-        margin-top: 0
 
     .decoration-layer
         margin-left: 80px
         width: calc(100% - 80px)
-
-        +breakpoint(pad-portrait)
-            margin-left: 0
-            margin-top: 20px
-            width: 100%
 
         &:after
             content: ''
@@ -141,9 +119,6 @@ body
             transform: translateX(-50%)
             z-index: -1
             pointer-events: none
-
-            +breakpoint(zone-nb)
-                bottom: -400px
 
     .service-card
         margin-left: 95px
@@ -167,16 +142,10 @@ body
             +breakpoint(zone-nb)
                 left: -60px
 
-            +breakpoint(pad-portrait)
-                left: -40px
-
     .title-box
         padding: 25px 40px
         display: inline-block
         background: $darkGold
-
-        +breakpoint(pad-portrait)
-            padding: 15px 20px
 
         span
             +display2
@@ -188,9 +157,6 @@ body
 
                 +title2
                 +secondary-white-color
-
-                +breakpoint(pad-portrait)
-                    font-size: 70%
 
                 &:before
                     content: '╱'
@@ -204,9 +170,6 @@ body
         display: inline-flex
         flex-wrap: wrap
 
-        +breakpoint(pad-portrait)
-            padding: 15px
-
         .card
             margin-right: 50px
             display: flex
@@ -218,13 +181,6 @@ body
 
             &:nth-child(3n)
                 margin-right: 0
-            
-            +breakpoint(pad-portrait)
-                margin-right: 20px !important
-                width: calc(50% - 10px)
-
-                &:nth-child(2n)
-                    margin-right: 0 !important
 
             div
                 width: 100%
@@ -235,28 +191,16 @@ body
                 background-repeat: no-repeat
                 background-size: cover
                 background-position: center
-            
-                +breakpoint(pad-portrait)
-                    width: 60px 
-                    height: 60px
 
             .title
                 +subHeader2
                 +default-color
-                
-                +breakpoint(pad-portrait)
-                    font-size: 16px
-                    margin: 20px 0 10px 0
 
             .content
                 padding: 0 10px
 
                 +body
                 +default-color
-                
-                +breakpoint(pad-portrait)
-                    font-size: 12px
-                    margin-bottom: 20px
 
 
 // feature
@@ -278,20 +222,13 @@ body
             border-radius: 0px 0px 30px 0px
             z-index: -1
 
-            +breakpoint(pad-portrait)
-                width: calc(100vw - 20px)
-                left: -40px
-
         .title
             +display2
             +default-white-color
 
         .intro
             +body
-            +secondary-white-color
-
-            +breakpoint(zone-nb)
-                font-size: 14px
+            +default-white-color
 
         ul
             display: flex
@@ -303,20 +240,12 @@ body
                 margin-right: 40px
                 padding: 70px 24px
                 width: calc(25% - (40px*3/4))
-                background: rgba(white, 0.2)
-                border: 1px solid rgba(white, 0.2)
+                background: rgba(black, 0.3)
+                border: 1px solid rgba(white, 0.5)
                 box-sizing: border-box
 
                 &:last-child
                     margin-right: 0
-
-                +breakpoint(pad-portrait)
-                    padding: 30px 15px
-                    margin: 0
-                    margin-bottom: 10px
-                    background: rgba(white, 0.2)
-                    border: 0px
-                    width: 100%
 
                 .content
                     +title2
@@ -344,10 +273,6 @@ body
             border-radius: 0px 0px 0px 30px
             background: white
             z-index: -1
-
-            +breakpoint(pad-portrait)
-                width: calc(65% + 65vw - 90px)
-                right: -40px
         
     .title-box
         padding: 25px 0px
@@ -376,41 +301,21 @@ body
     
         .function-box
             position: relative
-            width: 100%
             right: 0px
             top: 0px
-
+            
             .filter
                 margin-right: 0
-                height: 100%
                 display: flex
+                height: 100%
                 align-items: center
-
-                +breakpoint(pad-portrait)
-                    display: flex
-                    flex-wrap: wrap
-            
+                
                 li
                     margin-right: 30px
                     
                     &:last-child
                         margin: 0
-
-                    +breakpoint(pad-portrait)
-                        margin: 0
-                        margin-bottom: 10px !important
-                        width: 33.33%
-
-                    &:hover,
-                    &.active
-                        a
-                            padding-left: 40px
-                            color: #c69a6c
-                            
-                            &:before
-                                width: 30px
-                                background: #c69a6c
-
+                    
                     a
                         padding-left: 0px
                         position: relative
@@ -427,6 +332,15 @@ body
                             height: 1px
                             background: rgba(0, 0, 0, 0.55)
                             transition: .3s ease
+                            
+                        &:hover,
+                        &.active
+                            padding-left: 40px
+                            color: #c69a6c
+                            
+                            &:before
+                                width: 30px
+                                background: #c69a6c
                         
     .card-box
         display: inline-flex
@@ -437,13 +351,6 @@ body
             margin-bottom: 40px
             margin-right: 35px
             width: calc(33.333% - (70px/3))
-
-            +breakpoint(pad-portrait)
-                margin-right: 0px !important
-                width: 100%
-            
-                &:nth-child(2n)
-                    margin-right: 0px !important
             
             &:nth-child(3n)
                 margin-right: 0
@@ -468,10 +375,7 @@ body
                     background: rgba(black, 0.7)
                     
                     &:hover
-                        background: rgba(black, 0.5)
-
-                    +breakpoint(pad-portrait)
-                        padding: 15px 40px
+                        background
             
             .title
                 padding: 20px 0
