--- a/styles/header.css
+++ b/styles/header.css
@@ -123,6 +123,11 @@
   top: 0px;
   opacity: 1;
 }
+@media only screen and (max-width: 1439px) {
+  .header.fix:after {
+    background: #34312e;
+  }
+}
 .header.fix * {
   -webkit-transition: 0.5s ease;
   -o-transition: 0.5s ease;
