fix: 調整點擊範圍

--- a/includes/module/works.html
+++ b/includes/module/works.html
@@ -15,28 +15,30 @@
         </div>
       </div>
       <ul class="card-box">
-        <div class="work-card" data-cate="all Logo">
-          <div class="img-box"><img src="./images/works-01.jpg" data-original="images/works-01.jpg"/><a class="color-box" href="javascript:;">Detail</a></div>
+        <div class="work-card" data-cate="all Logo"><a class="img-box" href="javascript:;"><img src="./images/works-01.jpg" data-original="images/works-01.jpg"/>
+            <div class="color-box">Detail</div></a>
           <div class="title">社子島查估系統</div>
         </div>
         <div class="work-card" data-cate="all Logo">
-          <div class="img-box"><img src="./images/works-02.jpg" data-original="images/works-02.jpg"/><a class="color-box" href="javascript:;">Detail</a></div>
+          <div class="img-box"><img src="./images/works-02.jpg" data-original="images/works-02.jpg"/>
+            <div class="color-box">Detail</div>
+          </div>
           <div class="title">幼教聯盟</div>
         </div>
-        <div class="work-card" data-cate="all Logo">
-          <div class="img-box"><img src="images/works-03.jpg" data-original="images/works-03.jpg"/><a class="color-box" href="javascript:;">Detail</a></div>
+        <div class="work-card" data-cate="all Logo"><a class="img-box" href="javascript:;"><img src="images/works-03.jpg" data-original="images/works-03.jpg"/>
+            <div class="color-box">Detail</div></a>
           <div class="title">Crc兒童權利公約</div>
         </div>
-        <div class="work-card" data-cate="all Sys">
-          <div class="img-box"><img src="images/works-04.jpg" data-original="images/works-04.jpg"/><a class="color-box" href="javascript:;">Detail</a></div>
+        <div class="work-card" data-cate="all Sys"><a class="img-box" href="javascript:;"><img src="images/works-04.jpg" data-original="images/works-04.jpg"/>
+            <div class="color-box">Detail</div></a>
           <div class="title">司法改革進度資訊平台</div>
         </div>
-        <div class="work-card" data-cate="all Web">
-          <div class="img-box"><img src="images/works-05.jpg" data-original="images/works-05.jpg"/><a class="color-box" href="javascript:;">Detail</a></div>
+        <div class="work-card" data-cate="all Web"><a class="img-box" href="javascript:;"><img src="images/works-05.jpg" data-original="images/works-05.jpg"/>
+            <div class="color-box">Detail</div></a>
           <div class="title">2020北美獎徵件平台</div>
         </div>
-        <div class="work-card" data-cate="all Sys">
-          <div class="img-box"><img src="images/works-06.jpg" data-original="images/works-06.jpg"/><a class="color-box" href="javascript:;">Detail</a></div>
+        <div class="work-card" data-cate="all Sys"><a class="img-box" href="javascript:;"><img src="images/works-06.jpg" data-original="images/works-06.jpg"/>
+            <div class="color-box">Detail</div></a>
           <div class="title">erduo 爾多官方網站</div>
         </div>
       </ul>
