--- a/original/sass/custom.sass
+++ b/original/sass/custom.sass
@@ -458,13 +458,14 @@ body
                     background-position: center
                     border: 1px solid rgba(black, 0.05)
                     
-                a
+                .color-box
                     padding: 15px 60px
                     position: absolute
                     right: 0
                     bottom: -5px
                     color: white
                     background: rgba(black, 0.7)
+                    pointer-events: none
                     
                     &:hover
                         background: rgba(black, 0.5)
