--- a/original/views/includes/module/works.pug
+++ b/original/views/includes/module/works.pug
@@ -19,40 +19,40 @@
 							a(href="javascript:;") UI/X
 						li.option(data-filter="Ci")
 							a(href="javascript:;") CI設計
-							
+
 			ul.card-box
 				.work-card(data-cate="all Logo")
-					.img-box
+					a.img-box(href="javascript:;")
 						img(src="./images/works-01.jpg", data-original="images/works-01.jpg")
-						a.color-box(href="javascript:;") Detail
+						.color-box Detail
 					.title 社子島查估系統
 
 				.work-card(data-cate="all Logo")
 					.img-box
 						img(src="./images/works-02.jpg", data-original="images/works-02.jpg")
-						a.color-box(href="javascript:;") Detail
+						.color-box Detail
 					.title 幼教聯盟
 
 				.work-card(data-cate="all Logo")
-					.img-box
+					a.img-box(href="javascript:;")
 						img(src="images/works-03.jpg", data-original="images/works-03.jpg")
-						a.color-box(href="javascript:;") Detail
+						.color-box Detail
 					.title Crc兒童權利公約
 
 				.work-card(data-cate="all Sys")
-					.img-box
+					a.img-box(href="javascript:;")
 						img(src="images/works-04.jpg", data-original="images/works-04.jpg")
-						a.color-box(href="javascript:;") Detail
+						.color-box Detail
 					.title 司法改革進度資訊平台
 
 				.work-card(data-cate="all Web")
-					.img-box
+					a.img-box(href="javascript:;")
 						img(src="images/works-05.jpg", data-original="images/works-05.jpg")
-						a.color-box(href="javascript:;") Detail
+						.color-box Detail
 					.title 2020北美獎徵件平台
 
 				.work-card(data-cate="all Sys")
-					.img-box
+					a.img-box(href="javascript:;")
 						img(src="images/works-06.jpg", data-original="images/works-06.jpg")
-						a.color-box(href="javascript:;") Detail
+						.color-box Detail
 					.title erduo 爾多官方網站
