--- a/original/views/includes/module/service.pug
+++ b/original/views/includes/module/service.pug
@@ -1,41 +1,33 @@
-<div class="service m-B-100">
-	<div class="container full-40">
-		<div class="decoration-layer">
-			<div class="service-card">
-				<div class="title-box"><span>服務<small>Service</small></span></div>
-				<ul class="content-box">
-					<li class="card m-B-40">
-						<div class="img" style="background-image: url('images/icons/icon-rwd.png')"></div>
-						<div class="title m-T-60 m-B-30 t-C">響應式網頁設計</div>
-						<div class="content m-B-40 t-C">只要做一個網站的費用，就可以跨平台使用，解決多種裝置的瀏覽的問題。</div>
-					</li>
-					<li class="card m-B-40">
-						<div class="img" style="background-image: url('images/icons/icon-code.png')"></div>
-						<div class="title m-T-60 m-B-30 t-C">響應式網頁設計</div>
-						<div class="content m-B-40 t-C">只要做一個網站的費用，就可以跨平台使用，解決多種裝置的瀏覽的問題。</div>
-					</li>
-					<li class="card m-B-40">
-						<div class="img" style="background-image: url('images/icons/icon-seo.png')"></div>
-						<div class="title m-T-60 m-B-30 t-C">響應式網頁設計</div>
-						<div class="content m-B-40 t-C">只要做一個網站的費用，就可以跨平台使用，解決多種裝置的瀏覽的問題。</div>
-					</li>
-					<li class="card m-B-40">
-						<div class="img" style="background-image: url('images/icons/icon-system.png')"></div>
-						<div class="title m-T-60 m-B-30 t-C">響應式網頁設計</div>
-						<div class="content m-B-40 t-C">只要做一個網站的費用，就可以跨平台使用，解決多種裝置的瀏覽的問題。</div>
-					</li>
-					<li class="card m-B-40">
-						<div class="img" style="background-image: url('images/icons/icon-payment-flow.png')"></div>
-						<div class="title m-T-60 m-B-30 t-C">響應式網頁設計</div>
-						<div class="content m-B-40 t-C">只要做一個網站的費用，就可以跨平台使用，解決多種裝置的瀏覽的問題。</div>
-					</li>
-					<li class="card m-B-40">
-						<div class="img" style="background-image: url('images/icons/icon-design.png')"></div>
-						<div class="title m-T-60 m-B-30 t-C">響應式網頁設計</div>
-						<div class="content m-B-40 t-C">只要做一個網站的費用，就可以跨平台使用，解決多種裝置的瀏覽的問題。</div>
-					</li>
-				</ul>
-			</div>
-		</div>
-	</div>
-</div>
+.service.m-B-100(id="service")
+	.container.full-40
+		.decoration-layer
+			.service-card
+				.title-box
+					span 服務
+						small Service
+				ul.content-box
+					li.card.m-B-40
+						.img(style="background-image: url('images/icons/icon-rwd.png')")
+						.title.m-T-60.m-B-30.t-C 響應式網頁設計
+						.content.m-B-40.t-C 只要做一個網站的費用，就可以跨平台使用，解決多種裝置的瀏覽的問題。
+					li.card.m-B-40
+						.img(style="background-image: url('images/icons/icon-code.png')")
+						.title.m-T-60.m-B-30.t-C 響應式網頁設計
+						.content.m-B-40.t-C 只要做一個網站的費用，就可以跨平台使用，解決多種裝置的瀏覽的問題。
+					li.card.m-B-40
+						.img(style="background-image: url('images/icons/icon-seo.png')")
+						.title.m-T-60.m-B-30.t-C 響應式網頁設計
+						.content.m-B-40.t-C 只要做一個網站的費用，就可以跨平台使用，解決多種裝置的瀏覽的問題。
+					li.card.m-B-40
+						.img(style="background-image: url('images/icons/icon-system.png')")
+						.title.m-T-60.m-B-30.t-C 響應式網頁設計
+						.content.m-B-40.t-C 只要做一個網站的費用，就可以跨平台使用，解決多種裝置的瀏覽的問題。
+					li.card.m-B-40
+						.img(style="background-image: url('images/icons/icon-payment-flow.png')")
+						.title.m-T-60.m-B-30.t-C 響應式網頁設計
+						.content.m-B-40.t-C 只要做一個網站的費用，就可以跨平台使用，解決多種裝置的瀏覽的問題。
+					li.card.m-B-40
+						.img(style="background-image: url('images/icons/icon-design.png')")
+						.title.m-T-60.m-B-30.t-C 響應式網頁設計
+						.content.m-B-40.t-C 只要做一個網站的費用，就可以跨平台使用，解決多種裝置的瀏覽的問題。
+	
