--- a/styles/footer.css
+++ b/styles/footer.css
@@ -140,31 +140,6 @@
     max-width: calc(100% - 80px);
   }
 }
-.footer .container:after {
-  content: "";
-  position: absolute;
-  height: 100%;
-  width: 60%;
-  right: -80px;
-  bottom: 0;
-  background-image: url(../images/wave-03.png);
-  background-repeat: no-repeat;
-  background-size: contain;
-  background-position: bottom right;
-}
-.footer .container:before {
-  content: "";
-  position: absolute;
-  height: 18.78vw;
-  width: 60vw;
-  right: 0;
-  bottom: -45px;
-  background-image: url(../images/footer-text-01.png);
-  background-repeat: no-repeat;
-  background-size: cover;
-  background-position: center;
-  z-index: 0;
-}
 .footer .logo {
   margin-bottom: 215px;
   width: 11.09%;
@@ -194,4 +169,29 @@
   letter-spacing: 1.16px;
   line-height: 21px;
   color: rgba(0, 0, 0, 0.3);
+}
+.footer .dec:after {
+  content: "";
+  position: absolute;
+  height: 100%;
+  width: 53%;
+  bottom: 0;
+  right: 0;
+  background-image: url(../images/wave-03.png);
+  background-repeat: no-repeat;
+  background-size: contain;
+  background-position: bottom right;
+}
+.footer .dec:before {
+  content: "";
+  position: absolute;
+  height: 18.78vw;
+  width: 60vw;
+  right: 0;
+  bottom: -35px;
+  background-image: url(../images/footer-text-01.png);
+  background-repeat: no-repeat;
+  background-size: cover;
+  background-position: center;
+  z-index: 0;
 }
