--- a/includes/module/footer.html
+++ b/includes/module/footer.html
@@ -1,14 +1,16 @@
+
 <div class="footer">
-<div class="container">
-<div class="logo">
-<div class="img" style="background-image: url('images/logo-golden.svg')"></div>
-</div>
-<div class="contact">
-<div class="title m-B-30">Contact Us</div>
-<ul class="info-box">
-<li class="m-B-10">Tel:<span>+886 988519746</span></li>
-<li>E-mail:<span>wayne19921106@gmail.com</span></li>
-</ul>
-</div>
-</div>
+  <div class="container">
+    <div class="logo">
+      <div class="img" style="background-image: url('images/logo-golden.svg')"></div>
+    </div>
+    <div class="contact">
+      <div class="title m-B-30">Contact Us</div>
+      <ul class="info-box">
+        <li class="m-B-10">Tel:<span>+886 988519746</span></li>
+        <li>E-mail: <span>wayne19921106@gmail.com</span></li>
+      </ul>
+    </div>
+  </div>
+  <div class="dec"></div>
 </div>
