--- a/original/sass/custom.sass
+++ b/original/sass/custom.sass
@@ -61,7 +61,7 @@ body
 
     .banner-img
         width: 100%
-        padding-bottom: 50.8%
+        padding-bottom: calc(100vh - 40px)
         position: relative
         background-size: cover
         background-repeat: no-repeat
