--- a/original/views/includes/module/footer.pug
+++ b/original/views/includes/module/footer.pug
@@ -1,14 +1,12 @@
-<div class="footer">
-  <div class="container">
-    <div class="logo">
-      <div class="img" style="background-image: url('images/logo-golden.svg')"></div>
-    </div>
-    <div class="contact">
-      <div class="title m-B-30">Contact Us</div>
-      <ul class="info-box">
-        <li class="m-B-10">Tel:<span>+886 988519746</span></li>
-        <li>E-mail:<span>wayne19921106@gmail.com</span></li>
-      </ul>
-    </div>
-  </div>
-</div>
+.footer
+  .container
+    .logo
+      .img(style="background-image: url('images/logo-golden.svg')")
+    .contact
+      .title.m-B-30 Contact Us
+      ul.info-box
+        li.m-B-10 Tel:
+          span +886 988519746
+        li E-mail: 
+          span wayne19921106@gmail.com
+  .dec
