--- a/original/views/includes/module/header.pug
+++ b/original/views/includes/module/header.pug
@@ -1,15 +1,17 @@
-<div class="header fixed">
-	<div class="container flex f-V-B">
-		<div class="logo">
-			<div class="img" style="background-image: url('images/logo-white.svg')"></div>
-		</div>
-		<ul class="menu flex f-R">
-			<li><a class="t-C inline-block relative" href="#index">首頁<span class="inline-block absolute">Home</span></a></li>
-			<li><a class="t-C inline-block relative" href="#service">服務<span class="inline-block absolute">Service</span></a>
-			</li>
-			<li><a class="t-C inline-block relative" href="#works">作品<span class="inline-block absolute">Works</span></a></li>
-			<li><a class="t-C inline-block relative" href="#contact">聯絡我們
-			<span class="inline-block absolute">Contact</span></a></li>
-		</ul>
-	</div>
-</div>
+.header.fixed
+	.container.flex.f-V-B
+		.logo
+			.img(style="background-image: url('images/logo-white.svg')")
+		ul.menu.flex.f-R
+			li
+				a.t-C.inline-block.relative(href="#index") 首頁
+					<span class="inline-block absolute">Home</span></a></li>
+			li
+				a.t-C.inline-block.relative(href="#service") 服務
+					<span class="inline-block absolute">Service</span></a>
+			li
+				a.t-C.inline-block.relative(href="#works") 作品
+					<span class="inline-block absolute">Works</span></a></li>
+			li
+				a.t-C.inline-block.relative(href="#contact") 聯絡我們
+					<span class="inline-block absolute">Contact</span>
